- All egg liquids can be added to appropriate meals, not just yolk - DONE!!!

BUG FIXES:
- Primitive survival meat patches corrected for meals (cold pasta specifically)
- Hardened resin fixed so it hardens properly
- Peanut skins fixed so animals can eat them (egg shells fixed in ACA) - DONE!!!
- Oven transforms reviewed for all items
- SAUSAGE ONLY HAS HALF THE EXTRA NUTRIENTS WHEN BOILED??? WHY

NEW FOOD:
- added meatloaf?
- added walnut/sunflower butter?
- Dehydrated yeast added (cook in cooking pot; grind result)

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Food can be put on the ground, I guess?
- en.json cleansed of wildcraft text - DONE!!!; generally cleaned up and reorganized 
- Peanut skin model changed
- Soybean textures/shapes updated
- Dried peat bowl remapping done - DONE!!!


2.0.0-dev.3
- Scrambled egg recipe fixed
- Scrambled egg shape updated & textures updated for all liquid egg variants
- All egg visuals updated; new boiled egg texture 
- Water-glassed eggs can be cracked now
- More Animals compatibility updated, while we're doing all this egg stuff


2.0.0-dev.2
- Fixed old oil candle and other recipes crashing due to referencing the old bottles variant schema (new recipes dont account for whether a bottle is corked or not) 


2.0.0-dev.1
- New 1.20 clays integrated (thanks pizza2004!)
- Bowl recipes updated (names and remapping later) - DONE!!!
- Rolling pin tool rack transform fixed; now actually in the rack (thanks pizza2004!)
- Acorns 1.20+ compatiblity added - DONE!!!

BALANCING: 
- Salads and cold pasta allow cured sausage - DONE!!!
- Potent spirits do not cure into themselves anymore - DONE!!!
- Alcohol nutrition nerfed when in meals - DONE!!!
- Lard nutrition & healing nerfed; output doubled - DONE!!!
- Fruit bread/muffins nerfed; accept a max of 2 fruits instead of 5 (and gelatin) - DONE!!!
- Recipes using bottles require opened bottles now - DONE!!!