@@ -16,7 +16,7 @@
 		"displaycaseable": true,
 		"shelvable": true,
 		"inContainerTexture": { "base": "block/wood/barrel/raw-soybean" },
-		"foodTags": ["peanuts"],
+		"foodTags": ["peanut"],
 		"fertilizerPropsByType": {
 			"*-skins": {
 				"n": 20,
@@ -111,10 +111,6 @@
 				"saturation": 190,
 				"foodcategory": "Protein"
 			},
-            "*-skins": {
-                "saturation": 0,
-                "foodcategory": "Grain"
-            }
 	},
 	"guiTransformByType": {
           "*": {
