@@ -115,6 +115,7 @@ BUG FIXES:
 - Peanut skins fixed so animals can eat them (egg shells fixed in ACA) - DONE!!!
 - Oven transforms reviewed for all items
 - SAUSAGE ONLY HAS HALF THE EXTRA NUTRIENTS WHEN BOILED??? WHY
+- Peanut skins fixed so some animals will eat them - DONE!!!
 
 NEW FOOD:
 - added meatloaf?
